Refactor find users DTO mapping